# data-forge

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_FORGE_FULL_IMPLEMENTATION_AUDIT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  codeql.yml  dependabot.yml
docs/: DETAILED-IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION-PASS-SUMMARY.md  IMPLEMENTATION-SUMMARY-PHASES-1-12.md  IMPLEMENTATION-SUMMARY.md  INDEX.md  PLATFORM-CAPABILITIES.md  README.md  TODO-SUMMARY.md  adapter-maturity.md  api-reference.md  architecture-current-state.md  architecture-overview.md  ci-cd.md  create-and-config.md  custom-schema-studio.md  demo-walkthrough.md  dependency-audit.md  deployment.md  env.md  frontend-completion.md  gap-analysis-next-phase.md  generation-engine.md  lineage-and-reproducibility.md  migration-and-upgrades.md  observability-and-metrics.md  openapi.json  pack-authoring.md  performance-tuning.md  rehearsal.md  release-checklist.md  release-prep-plan.md  release-process.md  repository-cleanup-summary.md  retention-and-cleanup.md  scenario-versioning.md  schema-studio.md  security.md  service-layer.md  testing.md  use-cases.md  (+1 more)
frontend/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.setup.ts
rules/: adtech_analytics.yaml  ecommerce.yaml  fintech_transactions.yaml  healthcare_ops.yaml  hr_workforce.yaml  iot_telemetry.yaml  logistics_supply_chain.yaml  payments_ledger.yaml  saas_billing.yaml  social_platform.yaml
schemas/: adtech_analytics.sql  ecommerce.sql  fintech_transactions.sql  healthcare_ops.sql  hr_workforce.sql  iot_telemetry.sql  logistics_supply_chain.sql  payments_ledger.sql  saas_billing.sql  social_platform.sql
scripts/: clean_frontend_locks.ps1  export_openapi.py  extract_changelog.sh  pre-commit-ci-checks.ps1  run_demo.ps1  run_demo.sh  validate_all.ps1  validate_all.sh
tests/: __init__.py  test_adapters.py  test_anomaly_injector.py  test_api.py  test_cli.py  test_cloud_dbt_milestone.py  test_custom_schema_generation_rules.py  test_custom_schemas.py  test_engine.py  test_etl_milestone.py  test_example_scenarios.py  test_exporters.py  test_ge_airflow_milestone.py  test_generation_rule_execution.py  test_path_security.py  test_performance_milestone.py  test_privacy_contract_milestone.py  test_provenance_durability.py  test_row_planner.py  test_rule_engine.py  test_run_manifest_lineage.py  test_scenarios_milestone.py  test_schema_ingest.py  test_security.py  test_simulation_benchmark_milestone.py  test_table_store.py  (+1 more)
(+181 files in other folders)
